--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
   <body>
     <form>
       <input type="text" placeholder="type a TODO" />
-      <button>send</button>
+      <button class="button-send">send</button>
     </form>
-    <div style="display: grid; align-items: center"></div>
+    <div class="div-1"></div>
+    <div data-updateDiv class="rename-value"></div>
     <script src="script.js"></script>
   </body>
 </html>
